syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "remind/auth/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "Remind Auth Service API"
        version: "1.0"
        contact: {
        name: "Remind Auth";
        url: "https://github.com/lokissdo/auth-reminder";
        email: "nguyentienthanhgq@gmail.com";
        };
    };
};

message CreateTokenRequest {
    string username = 1;
}

message Payload {
    string id = 1;
    string username = 2;
    google.protobuf.Timestamp issued_at = 3;
    google.protobuf.Timestamp expired_at = 4;
}

message CreateTokenResponse {
    string token = 1;
    Payload payload = 2;
}

message VerifyTokenRequest {
    string token = 1;
}

message VerifyTokenResponse {
    Payload payload = 1;
}

service AuthRemind {
    rpc CreateToken (CreateTokenRequest) returns (CreateTokenResponse) {
        option (google.api.http) = {
            post: "/v1/create_token"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to create a new token";
            summary: "Create new token";
        };
    }

    rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenResponse) {
        option (google.api.http) = {
            post: "/v1/verify_token"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to verify a token";
            summary: "Verify token";
        };
    }
}
